--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <title>Document</title>
+    <title>Соколов Даниил Игоревич гр.211-326 25.01.2023г</title>
 </head>
+<header>
+    <img src="/img/logometting.svg" alt="logomeeting">
+    <img src="/img/menu.svg" alt="menu">
+</header>
 <body>
-    <h1>TEXT</h1>
+    <section>
+    <h1>The best video online meeting software.</h1>
+    <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default</p>
+<button></button>
+<img src="/img/picture.svg" alt="meeting">
+<h2>our special features</h2>
+<img src="/img/sale.svg" alt="salelogo">
+<h3>Affordable Pricing</h3>
+<p>A dictionary of over 200 Latin words,with a handful of model sentence. structures, to generate Lorem Ipsum</p>
+</section>
 </body>
 </html>
