--- a/index.html
+++ b/index.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Соколов Даниил Игоревич гр.211-326 25.01.2023г</title>
 </head>
 <header>
-    <img src="/img/logometting.svg" alt="logomeeting">
-    <img src="/img/menu.svg" alt="menu">
+    <img
+      class="headerImage"
+      src="/img/logometting.svg"
+      alt="logomeeting"
+    >
+    <img 
+    src="/img/menu.svg" 
+    alt="menu">
 </header>
+
 <body>
     <section>
-    <h1>The best video online meeting software.</h1>
-    <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default</p>
-<button></button>
-<img src="/img/picture.svg" alt="meeting">
-<h2>our special features</h2>
-<img src="/img/sale.svg" alt="salelogo">
-<h3>Affordable Pricing</h3>
-<p>A dictionary of over 200 Latin words,with a handful of model sentence. structures, to generate Lorem Ipsum</p>
-</section>
+        <h1 class="texth1">The best video online meeting software.</h1>
+        <p class="p1"> Many desktop publishing packages and web page editors now use Lorem Ipsum as their default</p>
+        <button class="button">Start for free </button>
+        <img 
+        src="/img/picture.svg" 
+        alt="meeting">
+        <h2 class="texth2">our special features</h2>
+        <img 
+        src="/img/sale.svg" 
+        alt="salelogo">
+        <h3 class="texth3">Affordable Pricing</h3>
+        <p class="pricetext">A dictionary of over 200 Latin words,with a handful of model sentence. structures, to generate Lorem Ipsum
+        </p>
+    </section>
 </body>
+
 </html>
