--- a/index.html
+++ b/index.html
@@ -5,38 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
+    <link rel="stylesheet" href="design.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="design.css">
-    <title>Соколов Даниил Игоревич гр.211-326 25.01.2023г</title>
+    <title>Соколов Даниил Игоревич 211-326 25.01.2023</title>
 </head>
-<header>
-    <img
-      class="headerImage"
-      src="/img/logometting.svg"
-      alt="logomeeting"
-    >
-    <img 
-    src="/img/menu.svg" 
-    alt="menu">
-</header>
 
 <body>
+    <header>
+        <a href="/"><img src="/img/logometting.svg" alt="logomeeting" width="70" height="20"></a>
+        <button class="buttonmenu"><img src="/img/menu.svg" alt="menu" width="28" height="12"></button>
+    </header>
     <section>
         <h1 class="texth1">The best video online meeting software.</h1>
         <p class="p1"> Many desktop publishing packages and web page editors now use Lorem Ipsum as their default</p>
         <button class="button">Start for free </button>
-        <img 
-        src="/img/picture.svg" 
-        alt="meeting">
-        <h2 class="texth2">our special features</h2>
-        <img 
-        src="/img/sale.svg" 
-        alt="salelogo">
+        <img src="/img/picture.svg" alt="meeting">
+        <h2 class="texth2">Our Special Features</h2>
+        <img src="/img/sale.svg" alt="salelogo">
         <h3 class="texth3">Affordable Pricing</h3>
-        <p class="pricetext">A dictionary of over 200 Latin words,with a handful of model sentence. structures, to generate Lorem Ipsum
-        </p>
+        <p class="pricetext">A dictionary of over 200 Latin words,with a handful of model sentence. structures, to generate Lorem Ipsum</p>
     </section>
 </body>
 
