--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <section>
         <h1 class="texth1">The best video online meeting software.</h1>
-        <p class="p1"> Many desktop publishing packages and web page editors now use Lorem Ipsum as their default</p>
+        <p> Many desktop publishing packages and web page editors now use Lorem Ipsum as their default</p>
         <button class="button">Start for free </button>
         <img src="/img/picture.svg" alt="meeting">
         <h2 class="texth2">Our Special Features</h2>
