--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <button class="buttonmenu"><img src="/img/menu.svg" alt="menu" width="28" height="12"></button>
     </header>
     <section>
-        <h1 class="texth1">The best video online meeting software.</h1>
+        <h1>The best video online meeting software.</h1>
         <p> Many desktop publishing packages and web page editors now use Lorem Ipsum as their default</p>
-        <button class="button">Start for free </button>
+        <button class="button" class="button:hover">Start for free </button>
         <img src="/img/picture.svg" alt="meeting">
         <h2 class="texth2">Our Special Features</h2>
         <img src="/img/sale.svg" alt="salelogo">
